<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etxtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_transparent"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/password"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_transparent"
        android:textCursorDrawable="@null" />

    <io.github.danigt91.cardbuilder.view.MyButton
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/iniciarSesion" />

    <io.github.danigt91.cardbuilder.view.MyButton
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/registrar" />

    <CheckBox
        android:id="@+id/ckbRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/recordar"
        android:text="@string/recordar"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_transparent"
        android:textColorLink="@color/gray_transparent" />

</LinearLayout>