<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtNombreCartaGaleria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <FrameLayout
        android:id="@+id/flImagenCarta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <io.github.danigt91.cardbuilder.view.MyButton
            android:id="@+id/btnGaleriaAnterior"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="20"
            android:text="@string/anterior" />

        <io.github.danigt91.cardbuilder.view.MyButton
            android:id="@+id/btnGaleriaMenos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="20"
            android:text="@string/menos" />

        <TextView
            android:id="@+id/txtNumAnadidas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_weight="20"
            android:gravity="center_horizontal"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <io.github.danigt91.cardbuilder.view.MyButton
            android:id="@+id/btnGaleriaMas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="20"
            android:text="@string/mas" />

        <io.github.danigt91.cardbuilder.view.MyButton
            android:id="@+id/btnGaleriaSiguiente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="20"
            android:text="@string/siguiente" />
    </LinearLayout>

</LinearLayout>